# Notes

./: .gitignore  README.md  update_readme.py
Ideas/: ConnectingImagesAndNaturalLanguage_AndrejKarpathy_2016.md
MT/: 1_split_train_val_test.py
compile_tf18_from_source/: 20190316.md  README.md
computer_vision/: README.md  VLP16_points_2.launch  dynamic_reconstruction.md  numerical_optimization.md  opencv.md  pcl.md  sfm.md  surface_reconstruction.md  time_synchronization.md
computer_vision/example/: CMakeLists.txt  README.md
computer_vision/example/apps/: CMakeLists.txt
computer_vision/example/common/: compute_vertex.cu  compute_vertex.h  cuda_snippets.hpp  image_proc.h  path.hpp  pyramid.hpp  static_image_properties.cpp  time_val.cpp  time_val.h
computer_vision/example/cpp/: CMakeLists.txt
computer_vision/example/cpp/common/: CMakeLists.txt  disable_copy_assign_move.h  logging.h  safe_open.hpp  static_image_properties.cpp  static_image_properties.h  time_logger.cpp  time_logger.h  time_val.cpp  time_val.h
computer_vision/example/cpp/dataset/: CMakeLists.txt  camera_params.hpp  dataset.cpp  dataset.h  dataset_azure_kinect.cpp  dataset_azure_kinect.h  dataset_base.cpp  dataset_base.h  dataset_nyu_v2.cpp  dataset_nyu_v2.h
computer_vision/example/cpp/img_proc/: CMakeLists.txt  cam_intr.h  frame.h  image_proc.cpp  image_proc.h
computer_vision/example/cpp/img_proc/cuda/: bilateral_filter.cu  bilateral_filter.h  compute_normal.cu  compute_normal.h  compute_vertex.cu  compute_vertex.h  cuda_snippets.hpp  cuda_stream.h  cuda_texture_surface.cu  cuda_texture_surface.h  cuda_timmer.h  pagelocked_memory.h  pyramid.hpp
computer_vision/example/cpp/img_proc/cuda/containers/: device_array.hpp  device_array_impl.hpp  device_memory.cpp  device_memory.hpp  device_memory_impl.hpp  kernel_containers.hpp
computer_vision/example/cpp/img_proc/cuda/icp/: icp.cpp  icp.cu  icp.h
computer_vision/example/cpp/img_proc/cuda/utils/: algorithm.hpp  eigen.hpp  vector_math.hpp
computer_vision/example/cpp/img_proc/icp/: icp.cpp  icp.cu  icp.h
computer_vision/example/cpp/visualize/: CMakeLists.txt  gl_render.h  gl_shader.h  pcl_vis.cpp  pcl_vis.h
computer_vision/example/cpp/visualize/shaders/: triangle.vert
computer_vision/example/dataset/: CMakeLists.txt  camera_params.hpp  dataset_azure_kinect.cpp  dataset_base.h  dataset_nyu_v2.cpp
computer_vision/example/examples/: CMakeLists.txt  config_parser.h
computer_vision/example/examples/test/: CMakeLists.txt
computer_vision/example/examples/test/test_azure_kinect/: CMakeLists.txt  test_colorize_depth_image.cpp  test_get_images.cpp  test_transform_images.cpp  test_undistort_images.cpp
computer_vision/example/examples/test/test_dataset/: CMakeLists.txt  Readme.md  test_azure_kinect_dataset.cpp  test_dataset.cpp  test_nyuv2_dataset.cpp
computer_vision/example/examples/test/test_img_proc/: CMakeLists.txt  test_icp.cpp  test_img_proc.cpp  test_pyramid.cpp
computer_vision/example/examples/test/test_opticalflow/: CMakeLists.txt  motion_to_color.cpp  motion_to_color.h  test_farneback.cpp  test_tvl1.cpp
computer_vision/example/examples/test/test_visualize/: CMakeLists.txt  test_pcl_visualizer.cpp  test_render_pointcloud.cpp  test_triangle.cpp
computer_vision/example/examples/tools/: CMakeLists.txt  build_pointcloud_k4a.cpp  record_images.cpp
computer_vision/example/test/: CMakeLists.txt  test_colorize_depth_image.cpp  test_get_images.cpp
computer_vision/example/test/test_dataset/: CMakeLists.txt
computer_vision/example/test/test_visualize/: CMakeLists.txt  test_glm.cpp  test_pcl_visualizer.cpp  test_render_pointcloud.cpp  test_view_control.cpp
computer_vision/example/utils/: snippets.h
computer_vision/example/visualize/: gl_render.cpp  gl_render.h  pcl_vis.cpp
docker/: README.md  docker_usage_examples.md  examples_cuda.md  examples_others.md  examples_web.md  images.md  images_list_aliyun.md  list_img_tags.sh  operations.md
gpu/: CMakeLists.txt  get_started.md  test.cu
machine_translation/: 1_split_train_val_test.py
neo4j/: getting_started.md  load_wikidata_csv.md
others/: unicode_range.md
others/computer_vision/example/: CMakeLists.txt  DepthPixelColorizer.h  Pixel.h  StaticImageProperties.cpp  StaticImageProperties.h  Util.cpp  Util.h  colorize_depth_image.cpp  get_images.cpp  get_images_bak.cpp  transform_images.cpp  undistort_images.cpp
others/computer_vision/example/apps/: CMakeLists.txt  build_pointcloud.cpp  build_pointcloud_k4a.cpp  record_images.cpp
others/computer_vision/example/common/: CMakeLists.txt  StaticImageProperties.cpp  compute_vertex.h  cuda_snippets.hpp  cuda_texture_surface.cpp  cuda_texture_surface.cu  cuda_texture_surface.h  image_proc.cpp  path.hpp  static_image_properties.cpp  static_image_properties.h  time_logger.cpp  time_logger.h  time_val.cpp
others/computer_vision/example/dataset/: CMakeLists.txt  camera_params.h  dataset_base.cpp  dataset_nyu_v2.cpp  dataset_nyu_v2.h  nyu_v2.cpp  nyu_v2.h  nyu_v2_sync_color_depth_image.py
others/computer_vision/example/devs/: CMakeLists.txt  colorize_depth_image.cpp  get_images.cpp  test_pyramid.cpp  transform_images.cpp
others/computer_vision/example/test/: CMakeLists.txt  office_0001b.filelists.txt
others/computer_vision/example/test/test_dataset/: CMakeLists.txt  test_azure_kinect_dataset.cpp  test_camera_params.cpp  test_dataset.cpp  test_nyuv2_dataset.cpp
others/computer_vision/example/test/test_visualize/: CMakeLists.txt  test_glfw_glad.cpp  test_pcl_visualizer.cpp  test_triangle.cpp
others/computer_vision/example/utils/: logging.h  snippets.h
others/computer_vision/example/visualize/: CMakeLists.txt  gl_camera.hpp  gl_render.cpp  gl_render.h  gl_shader.cpp  gl_shader.h  glad.c  pcl_vis.h  readme.md  visualizer.cpp  visualizer.h
others/computer_vision/example/visualize/glad/: glad.h
others/computer_vision/example/visualize/shaders/: pointcloud.frag  pointcloud.vert
reinforcement_learning/: README.md
ros/: ImuExtractor.py  concat_bags_offset.py  rosbag_reader.hpp  video2rosbag.py
tensorflow/: README.md  (+1 more)
(+55 files in other folders)
